# tenantiq

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  apps.py  chunking.py  embeddings.py  generation.py  guardrails.py  ingestion.py  middleware.py  models.py  parsing.py  rag.py  retrieval.py  serializers.py  tasks.py  tenant_context.py  throttling.py  views.py
backend/app/auth/: authentication.py  tenancy.py  verifier.py
backend/app/eval/: run.py
backend/app/management/commands/: backfill_embeddings.py  reingest_documents.py  smoke_ingest.py
backend/app/migrations/: 0001_initial.py  0002_document.py  0003_tenant_rls.py  0004_document_content_type_document_file_and_more.py  0005_chunk.py  0006_chunk_rls.py  0007_chunk_embedding.py  0008_chunk_embedding_index.py  0009_document_observability.py  0010_chunk_offsets.py
backend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  test_authentication.py  test_backfill.py  test_chunking.py  test_documents_api.py  test_documents_upload.py  test_embeddings.py  test_generation.py  test_guardrails.py  test_ingestion.py  test_parsing.py  test_query.py  test_rag.py  test_ratelimit_api.py  test_reingest.py  test_retrieval.py  test_rls.py  test_scoped_manager.py  test_smoke.py  test_smoke_ingest.py  test_tasks.py  test_tenant_context.py  test_tenant_isolation.py  test_throttling.py  test_verifier.py
docs/: architecture.md  auth-keycloak.md  devlog.md  evaluation.md  tenant-isolation.md  threat-model.md
docs/adr/: 0000-template.md  0001-stack-and-scope.md  0002-tenant-isolation.md  0003-chunking-strategy.md  0004-embeddings-and-vector-store.md  0005-ingestion-observability.md  0006-local-dev-containerization.md  0007-grounded-prompt-assembly.md  0008-grounded-generation.md  0009-query-streaming.md  0010-pii-redaction-and-injection-guardrails.md  0011-per-tenant-rate-limiting-and-quotas.md
frontend/: .eslintignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/tests/: smoke.test.ts
infra/postgres/init/: 10-app-role.sql  20-vector-extension.sql
scripts/: setup-github.sh
