[project]
name = "tenantiq-backend"
version = "0.1.0"
description = "TenantIQ backend — multi-tenant RAG API"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "celery>=5.3",
    "redis>=5.0",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "black>=24.0"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
